--- a/t2/README
+++ b/t2/README
@@ -1,7 +1,14 @@
 El archivo makefile permite ejecutar los programas de manera
 sencilla:
 
-Para el problema 4, pueden ejecutarse las búsquedas por escalada
+Para el problema 1, pueden ejecutarse las búsquedas por escalada
+independientes con los targets correspondientes (solveSph,solveAck,
+solveGrie, solveTenth, solveRast, solveRosen),
+o pueden almacenarse los resultados en tablas con
+los targets correspondientes (saveSph, saveAck, saveGrie, saveTenth,
+saveRast, saveRosen).
+
+Para el problema 2, pueden ejecutarse las búsquedas por escalada
 independientes con los targets correspondientes (solvepbl, solvexqf, solvexqg),
 o pueden ejecutarse todos al mismo tiempo con el target solveTSP.
 Por otro lado, pueden guardarse en tablas los resultados de cada
